# OpenMonkey

./: .gitignore  BUILD.md  Cargo.toml  DEVELOPMENT_ROADMAP.md  MIGRATION_PLAN.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  RELOCATION_COMPLETE.md  example_email_skill.md  example_skill.md  example_web_search_skill.md  index.html  package-lock.json  package.json  vite.config.ts  一键启动.bat  一键启动.sh  开发文档.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
apps/desktop-backend/: Cargo.toml  tauri.conf.json
apps/desktop-backend/src/: commands.rs  lib.rs  main.rs  util.rs
apps/desktop-backend/src/core/: channel_manager.rs  config_store.rs  memory_bank.rs  mod.rs  reflector.rs  secure_vault.rs  soul_manager.rs  stats.rs
apps/desktop-backend/src/core/channels/: feishu.rs  feishu_ws.rs  telegram.rs  wecom.rs
apps/desktop-backend/src/llm/: client.rs
apps/desktop-frontend/: types.ts
apps/desktop-frontend/components/: ChannelSettings.tsx  Settings.tsx
apps/desktop-frontend/store/: useAppStore.ts
assets/templates/skills/: om_skill_pdf_tool.md
assets/templates/soul/: SOUL.md  USER.md
docs/: COMPILATION_FIX.md  COMPLETE_FINAL_REPORT.md  FINAL_REPORT.md  INTEGRATION_PLAN.md  PHASE2_COMPLETE.md  PHASE3_DAY1_COMPLETE.md  PHASE3_DAY1_PROGRESS.md  TASKS.md
skills/official/: calculator.md
skills/templates/: OM_SKILL_FORMAT.md  om_skill_web_design.md
src/: App.tsx
src-tauri/: Cargo.toml
src-tauri/src/core/: secure_vault.rs  skill_adapter.rs
src-tauri/src/core/channels/: mod.rs
src-tauri/src/llm/: mod.rs  prompt_templates.rs
src/components/: Chat.tsx  SkillImporter.tsx  SoulStudio.tsx
