[workspace]
resolver = "2"
members = [
    "apps/desktop-backend",
    "packages/core/memory",
    "packages/core/soul",
    "packages/core/agent",
    "packages/shared",
    # WASM 相关包暂时禁用（cap-primitives 兼容性问题）
    # 将在后续版本解决
    # "packages/core/skill",
    # "packages/wasm-runtime",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["OpenMonkey Team <yibaig@openmonkey.ai>"]
license = "MIT"
repository = "https://github.com/yibaig/OpenMonkey"

[workspace.dependencies]
# Tauri
tauri = { version = "2.0" }
tauri-plugin-shell = { version = "2.0" }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# 数据库
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "chrono"] }

# HTTP 客户端
reqwest = { version = "0.11", features = ["json"] }

# 安全存储
keyring = { version = "2.0", features = ["secret-service"] }

# 文件系统
notify = "6.0"
dirs = "5.0"

# 工具
slug = "0.1"
chrono = { version = "0.4", features = ["serde"] }

# 日志
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"

# 加密
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"

# WebSocket
tokio-tungstenite = "0.21"
futures = "0.3"
url = "2.5"

# 异步工具
async-trait = "0.1"

# WASM
wasmtime = "15.0"
wasmtime-wasi = "15.0"

# Qdrant
qdrant-client = "1.7"

# UUID
uuid = { version = "1.0", features = ["v4"] }

# 错误处理
thiserror = "1.0"
anyhow = "1.0"
