[package]
name = "openmonkey"
version.workspace = true
description = "OpenMonkey v2.0 - Living & Universal AI Agent"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { workspace = true }
tauri-plugin-shell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true }
keyring = { workspace = true }
notify = { workspace = true }
dirs = { workspace = true }
slug = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1"

# WebSocket dependencies for Feishu long connection
tokio-tungstenite = "0.21"
futures = "0.3"
url = "2.5"

# Logging
log = "0.4"
env_logger = "0.10"

# Crypto dependencies for Feishu message decryption
base64 = "0.22"
rand = "0.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
